--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,16 +1,26 @@
 {
         "version": "0.2.0",
         "configurations": [
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Mocha Tests",
-            "program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
-            "args": [
-                "*spec.js"
-            ],
-            "internalConsoleOptions": "openOnSessionStart"
-        },
+            {
+                "type": "node",
+                "request": "launch",
+                "name": "Mocha Tests",
+                "program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
+                "args": [
+                    "*spec.js"
+                ],
+                "internalConsoleOptions": "openOnSessionStart"
+            },
+            {
+                "type": "node",
+                "request": "launch",
+                "name": "Mocha TimemoduleTests",
+                "program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
+                "args": [
+                    "timemodule.test.js"
+                ],
+                "internalConsoleOptions": "openOnSessionStart"
+            },
             {
                 "type": "node",
                 "request": "launch",
