--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "eslint": "4.8.0",
     "eslint-config-hrundel": "latest",
     "mocha": "3.1.0"
+  },
+  "devDependencies": {
+    "nyc": "11.2.1"
   }
 }
