--- a/.editorconfig
+++ b/.editorconfig
@@ -1,15 +1,15 @@
+root = true
+
 [*]
-charset=utf-8
-end_of_line=lf
-insert_final_newline=false
-indent_style=space
-indent_size=4
+charset = utf-8
+end_of_line = lf
+insert_final_newline = true
+indent_size = 4
+indent_style = space
+trim_trailing_whitespace = true
 
-[{.eslintrc,.babelrc,.stylelintrc,jest.config,*.json,*.jsb3,*.jsb2,*.bowerrc}]
-indent_style=space
-indent_size=2
+[*.json]
+indent_size = 2
 
-[{.analysis_options,*.yml,*.yaml}]
-indent_style=space
-indent_size=2
-
+[*.md]
+trim_trailing_whitespace = false
