--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "eslint": "4.8.0",
     "eslint-config-hrundel": "latest",
+    "jshint": "2.9.5",
     "mocha": "3.1.0"
   }
 }
